bindings/dart/lib/src/revault_native.dart

            'lockbox_define_form',
          ),
      _lockbox_list_form_definitions = library
          .lookupFunction<
            _LockboxListFormDefinitionsNative,
            _LockboxListFormDefinitionsDart
          >('lockbox_list_form_definitions'),
      _lockbox_resolve_form = library
          .lookupFunction<_LockboxResolveFormNative, _LockboxResolveFormDart>(
            'lockbox_resolve_form',
          ),
      _lockbox_list_form_revisions = library
          .lookupFunction<
            _LockboxListFormRevisionsNative,
            _LockboxListFormRevisionsDart
          >('lockbox_list_form_revisions'),
      _lockbox_create_form_record = library
          .lookupFunction<
            _LockboxCreateFormRecordNative,
            _LockboxCreateFormRecordDart
          >('lockbox_create_form_record'),
      _lockbox_set_form_field = library
          .lookupFunction<_LockboxSetFormFieldNative, _LockboxSetFormFieldDart>(
            'lockbox_set_form_field',
          ),
      _lockbox_set_secret_form_field = library
          .lookupFunction<
            _LockboxSetSecretFormFieldNative,
            _LockboxSetSecretFormFieldDart
          >('lockbox_set_secret_form_field'),
      _lockbox_list_form_records = library
          .lookupFunction<
            _LockboxListFormRecordsNative,
            _LockboxListFormRecordsDart
          >('lockbox_list_form_records'),
      _lockbox_get_form_record = library
          .lookupFunction<
            _LockboxGetFormRecordNative,
            _LockboxGetFormRecordDart
          >('lockbox_get_form_record'),
      _lockbox_delete_form_record = library
          .lookupFunction<
            _LockboxDeleteFormRecordNative,
            _LockboxDeleteFormRecordDart
          >('lockbox_delete_form_record'),
      _lockbox_move_form_records = library
          .lookupFunction<
            _LockboxMoveFormRecordsNative,
            _LockboxMoveFormRecordsDart
          >('lockbox_move_form_records'),
      _lockbox_get_form_field = library
          .lookupFunction<_LockboxGetFormFieldNative, _LockboxGetFormFieldDart>(
            'lockbox_get_form_field',
          ),
      _lockbox_get_secret_form_field = library
          .lookupFunction<
            _LockboxGetSecretFormFieldNative,
            _LockboxGetSecretFormFieldDart
          >('lockbox_get_secret_form_field'),
      _lockbox_to_bytes = library
          .lookupFunction<_LockboxToBytesNative, _LockboxToBytesDart>(
            'lockbox_to_bytes',
          ),
      _lockbox_free = library
          .lookupFunction<_LockboxFreeNative, _LockboxFreeDart>('lockbox_free'),
      _vault_is_running = library
          .lookupFunction<_VaultIsRunningNative, _VaultIsRunningDart>(
            'vault_is_running',
          ),
      _vault_forget_all = library
          .lookupFunction<_VaultForgetAllNative, _VaultForgetAllDart>(
            'vault_forget_all',
          ),
      _key_contact_generate = library
          .lookupFunction<_KeyContactGenerateNative, _KeyContactGenerateDart>(
            'key_contact_generate',
          ),
      _key_contact_from_private = library
          .lookupFunction<
            _KeyContactFromPrivateNative,
            _KeyContactFromPrivateDart
          >('key_contact_from_private'),
      _key_contact_public = library
          .lookupFunction<_KeyContactPublicNative, _KeyContactPublicDart>(
            'key_contact_public',
          ),
      _key_contact_private = library
          .lookupFunction<_KeyContactPrivateNative, _KeyContactPrivateDart>(
            'key_contact_private',
          ),
      _key_contact_public_from_bytes = library
          .lookupFunction<
            _KeyContactPublicFromBytesNative,
            _KeyContactPublicFromBytesDart
          >('key_contact_public_from_bytes'),
      _key_contact_public_free = library
          .lookupFunction<
            _KeyContactPublicFreeNative,
            _KeyContactPublicFreeDart
          >('key_contact_public_free'),
      _key_contact_free = library
          .lookupFunction<_KeyContactFreeNative, _KeyContactFreeDart>(
            'key_contact_free',
          ),
      _key_contact_encrypt = library
          .lookupFunction<_KeyContactEncryptNative, _KeyContactEncryptDart>(
            'key_contact_encrypt',
          ),
      _key_contact_decrypt = library
          .lookupFunction<_KeyContactDecryptNative, _KeyContactDecryptDart>(
            'key_contact_decrypt',
          ),
      _key_contact_wrapped_public = library
          .lookupFunction<
            _KeyContactWrappedPublicNative,
            _KeyContactWrappedPublicDart
          >('key_contact_wrapped_public'),
      _key_contact_wrapped_ciphertext = library
          .lookupFunction<
            _KeyContactWrappedCiphertextNative,
            _KeyContactWrappedCiphertextDart
          >('key_contact_wrapped_ciphertext'),
      _key_contact_wrapped_encrypted = library
          .lookupFunction<
            _KeyContactWrappedEncryptedNative,
            _KeyContactWrappedEncryptedDart
          >('key_contact_wrapped_encrypted'),
      _key_contact_wrapped_free = library
          .lookupFunction<
            _KeyContactWrappedFreeNative,
            _KeyContactWrappedFreeDart
          >('key_contact_wrapped_free'),
      _key_signing_generate = library
          .lookupFunction<_KeySigningGenerateNative, _KeySigningGenerateDart>(
            'key_signing_generate',
          ),
      _key_signing_from_private = library
          .lookupFunction<
            _KeySigningFromPrivateNative,
            _KeySigningFromPrivateDart
          >('key_signing_from_private'),
      _key_signing_public = library
          .lookupFunction<_KeySigningPublicNative, _KeySigningPublicDart>(
            'key_signing_public',
          ),
      _key_signing_private = library
          .lookupFunction<_KeySigningPrivateNative, _KeySigningPrivateDart>(
            'key_signing_private',
          ),
      _key_signing_public_from_bytes = library
          .lookupFunction<
            _KeySigningPublicFromBytesNative,
            _KeySigningPublicFromBytesDart
          >('key_signing_public_from_bytes'),
      _key_signing_public_free = library
          .lookupFunction<
            _KeySigningPublicFreeNative,
            _KeySigningPublicFreeDart
          >('key_signing_public_free'),
      _key_signing_free = library
          .lookupFunction<_KeySigningFreeNative, _KeySigningFreeDart>(
            'key_signing_free',
          ),
      _vault_key_export_private = library
          .lookupFunction<
            _VaultKeyExportPrivateNative,
            _VaultKeyExportPrivateDart
          >('vault_key_export_private'),
      _vault_key_export_public = library
          .lookupFunction<
            _VaultKeyExportPublicNative,
            _VaultKeyExportPublicDart
          >('vault_key_export_public'),
      _vault_key_import_private = library
          .lookupFunction<
            _VaultKeyImportPrivateNative,
            _VaultKeyImportPrivateDart
          >('vault_key_import_private'),
      _vault_key_import_public = library
          .lookupFunction<
            _VaultKeyImportPublicNative,
            _VaultKeyImportPublicDart
          >('vault_key_import_public'),
      _vault_key_fingerprint = library
          .lookupFunction<_VaultKeyFingerprintNative, _VaultKeyFingerprintDart>(
            'vault_key_fingerprint',
          ),
      _vault_key_format_hex = library
          .lookupFunction<_VaultKeyFormatHexNative, _VaultKeyFormatHexDart>(
            'vault_key_format_hex',
          ),
      _vault_key_decode_hex = library
          .lookupFunction<_VaultKeyDecodeHexNative, _VaultKeyDecodeHexDart>(
            'vault_key_decode_hex',
          ),
      _vault_key_format_crockford = library
          .lookupFunction<
            _VaultKeyFormatCrockfordNative,
            _VaultKeyFormatCrockfordDart
          >('vault_key_format_crockford'),
      _vault_key_format_crockford_reading = library
          .lookupFunction<
            _VaultKeyFormatCrockfordReadingNative,
            _VaultKeyFormatCrockfordReadingDart
          >('vault_key_format_crockford_reading'),
      _vault_key_decode_crockford = library
          .lookupFunction<
            _VaultKeyDecodeCrockfordNative,
            _VaultKeyDecodeCrockfordDart
          >('vault_key_decode_crockford'),
      _vault_key_hex_encode = library
          .lookupFunction<_VaultKeyHexEncodeNative, _VaultKeyHexEncodeDart>(
            'vault_key_hex_encode',
          ),
      _vault_key_hex_decode = library
          .lookupFunction<_VaultKeyHexDecodeNative, _VaultKeyHexDecodeDart>(
            'vault_key_hex_decode',
          ),
      _vault_directory_open = library
          .lookupFunction<_VaultDirectoryOpenNative, _VaultDirectoryOpenDart>(
            'vault_directory_open',
          ),
      _vault_structure_version_current = library
          .lookupFunction<
            _VaultStructureVersionCurrentNative,
            _VaultStructureVersionCurrentDart
          >('vault_structure_version_current'),
      _vault_directory_probe_structure_version = library
          .lookupFunction<
            _VaultDirectoryProbeStructureVersionNative,
            _VaultDirectoryProbeStructureVersionDart
          >('vault_directory_probe_structure_version'),
      _vault_directory_open_or_create_default = library
          .lookupFunction<
            _VaultDirectoryOpenOrCreateDefaultNative,
            _VaultDirectoryOpenOrCreateDefaultDart
          >('vault_directory_open_or_create_default'),
      _vault_directory_replace_default = library
          .lookupFunction<
            _VaultDirectoryReplaceDefaultNative,
            _VaultDirectoryReplaceDefaultDart
          >('vault_directory_replace_default'),
      _vault_directory_change_password = library
          .lookupFunction<
            _VaultDirectoryChangePasswordNative,
            _VaultDirectoryChangePasswordDart
          >('vault_directory_change_password'),
      _vault_directory_change_default_password = library
          .lookupFunction<
            _VaultDirectoryChangeDefaultPasswordNative,
            _VaultDirectoryChangeDefaultPasswordDart
          >('vault_directory_change_default_password'),
      _vault_directory_replace = library
          .lookupFunction<
            _VaultDirectoryReplaceNative,
            _VaultDirectoryReplaceDart
          >('vault_directory_replace'),
      _vault_directory_open_or_create = library
          .lookupFunction<
            _VaultDirectoryOpenOrCreateNative,
            _VaultDirectoryOpenOrCreateDart
          >('vault_directory_open_or_create'),
      _vault_directory_root = library
          .lookupFunction<_VaultDirectoryRootNative, _VaultDirectoryRootDart>(
            'vault_directory_root',
          ),
      _vault_directory_structure_version = library
          .lookupFunction<
            _VaultDirectoryStructureVersionNative,
            _VaultDirectoryStructureVersionDart
          >('vault_directory_structure_version'),
      _vault_directory_list_private_keys = library
          .lookupFunction<
            _VaultDirectoryListPrivateKeysNative,
            _VaultDirectoryListPrivateKeysDart
          >('vault_directory_list_private_keys'),
      _vault_directory_list_private_key_names = library
          .lookupFunction<
            _VaultDirectoryListPrivateKeyNamesNative,
            _VaultDirectoryListPrivateKeyNamesDart
          >('vault_directory_list_private_key_names'),
      _vault_directory_list_contact_names = library
          .lookupFunction<
            _VaultDirectoryListContactNamesNative,
            _VaultDirectoryListContactNamesDart
          >('vault_directory_list_contact_names'),
      _vault_directory_list_form_aliases = library
          .lookupFunction<
            _VaultDirectoryListFormAliasesNative,
            _VaultDirectoryListFormAliasesDart
